--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "data-plotter",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5229",
   "dependencies": {
     "@reduxjs/toolkit": "^1.7.0",
     "@testing-library/jest-dom": "^4.2.4",
