--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "data-plotter",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5229",
   "dependencies": {
     "@reduxjs/toolkit": "^1.7.0",
     "@testing-library/jest-dom": "^4.2.4",
@@ -21,7 +20,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --verbose",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
