--- a/package.json
+++ b/package.json
@@ -15,7 +15,14 @@
     "react-google-charts": "^3.0.15",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
-    "recharts": "^2.1.8"
+    "recharts": "^2.1.8",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@material-ui/core": "^4.12.3",
+    "@mui/icons-material": "^5.2.4",
+    "@mui/material": "^5.2.4",
+    "@mui/styled-engine-sc": "^5.1.0",
+    "@mui/styles": "^5.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
