--- a/package.json
+++ b/package.json
@@ -3,6 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@material-ui/core": "^4.12.3",
+    "@mui/icons-material": "^5.2.4",
+    "@mui/material": "^5.2.4",
+    "@mui/styled-engine-sc": "^5.1.0",
+    "@mui/styles": "^5.2.3",
     "@reduxjs/toolkit": "^1.7.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -13,16 +20,10 @@
     "react-charts": "^2.0.0-beta.7",
     "react-dom": "^17.0.2",
     "react-google-charts": "^3.0.15",
+    "react-hook-form": "^7.31.1",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
-    "recharts": "^2.1.8",
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
-    "@material-ui/core": "^4.12.3",
-    "@mui/icons-material": "^5.2.4",
-    "@mui/material": "^5.2.4",
-    "@mui/styled-engine-sc": "^5.1.0",
-    "@mui/styles": "^5.2.3"
+    "recharts": "^2.1.8"
   },
   "scripts": {
     "start": "react-scripts start",
