--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --verbose",
     "eject": "react-scripts eject",
-    "ci": "yarn install"
+    "ci": "npm install"
   },
   "eslintConfig": {
     "extends": "react-app"
