--- a/.github/workflows/react-pr.yml
+++ b/.github/workflows/react-pr.yml
@@ -22,6 +22,7 @@ jobs:
         with:
           node-version: 14.x
           cache: "npm"
+      - run: npm intall
       - run: npm ci
       #  - run: npm run build --if-present
       - run: npm test
