--- a/.github/workflows/react-pr.yml
+++ b/.github/workflows/react-pr.yml
@@ -9,10 +9,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: checkout
+      - name: setup node
         uses: actions/setup-node@v3
         with:
           node-version: 14.x
           cache: "npm"
       - run: npm install
       - run: npm test
+      - run: yarn build
