--- a/.github/workflows/react-main.yml
+++ b/.github/workflows/react-main.yml
@@ -13,6 +13,6 @@ jobs:
         with:
           node-version: 14.x
           cache: "npm"
-      - run: npm install
-      - run: npm test
+      - run: yarn install
+      - run: yarn test
       - run: yarn build
