--- a/.github/workflows/react-pr.yml
+++ b/.github/workflows/react-pr.yml
@@ -14,6 +14,6 @@ jobs:
         with:
           node-version: 14.x
           cache: "npm"
-      - run: npm install
-      - run: npm test
+      - run: yarn install
+      - run: yarn test
       - run: yarn build
