--- a/.github/workflows/react-pr.yml
+++ b/.github/workflows/react-pr.yml
@@ -17,7 +17,7 @@ jobs:
       - run: yarn test
       - run: yarn build
 
-- name: Configure AWS Credentials
+      - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets. AWS_ACCESS_KEY_ID }}
@@ -25,5 +25,4 @@ jobs:
           aws-region: eu-west-1
 
       - name: Copy files to the s3 website content bucket
-        run:
-          aws s3 sync build s3://${{ secrets.AWS_S3_BUCKET_NAME }}/test2
+        run: aws s3 sync build s3://${{ secrets.AWS_S3_BUCKET_NAME }}/test2
