--- a/.github/workflows/react-pr.yml
+++ b/.github/workflows/react-pr.yml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 14.x
-          cache: "npm"
+          cache: "yarn"
       - run: yarn install
       - run: yarn test
       - run: yarn build
