--- a/.github/workflows/react-pr.yml
+++ b/.github/workflows/react-pr.yml
@@ -18,7 +18,7 @@ jobs:
       - run: yarn build
 
       - name: relative to absolute
-        run: sed -i 's/\/data/https:\/\/bromleysat.space\/data/g' build/index.html
+        run: sed -i 's/\/static/https:\/\/bromleysat.space\/data\/static/g' build/index.html
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
