--- a/.github/workflows/react-pr.yml
+++ b/.github/workflows/react-pr.yml
@@ -28,4 +28,4 @@ jobs:
           aws-region: eu-west-2
 
       - name: Copy files to the s3 website content bucket
-        run: aws s3 sync build s3://${{ secrets.AWS_S3_BUCKET_NAME }}/test2
+        run: aws s3 sync build s3://${{ secrets.AWS_S3_BUCKET_NAME }}/data
