--- a/.github/workflows/react-main.yml
+++ b/.github/workflows/react-main.yml
@@ -12,7 +12,20 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 14.x
-          cache: "npm"
+          cache: "yarn"
       - run: yarn install
       - run: yarn test
       - run: yarn build
+
+      - name: relative to absolute
+        run: sed -i 's/\/static/https:\/\/bromleysat.space\/data\/static/g' build/index.html
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets. AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets. AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-west-2
+
+      - name: Copy files to the s3 website content bucket
+        run: aws s3 sync build s3://${{ secrets.AWS_S3_BUCKET_NAME }}/data
