--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@fortawesome/fontawesome-svg-core": "^6.1.2",
+    "@fortawesome/free-solid-svg-icons": "^6.1.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@material-ui/core": "^4.12.3",
     "@mui/icons-material": "^5.2.4",
     "@mui/material": "^5.2.4",
@@ -22,7 +25,8 @@
     "react-google-charts": "^3.0.15",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
-    "recharts": "^2.1.8"
+    "recharts": "^2.1.8",
+    "styled-components": "^5.3.5"
   },
   "scripts": {
     "start": "react-scripts start",
