--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --verbose",
-    "eject": "react-scripts eject",
-    "cypress": "cypress open"
+    "test:e2e": "",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -51,10 +51,7 @@
     ]
   },
   "devDependencies": {
-    "@bromleysat/relative-to-absolute": "^1.1.0",
-    "@testing-library/cypress": "^8.0.3",
-    "cypress": "^10.4.0",
-    "eslint-plugin-cypress": "^2.12.1"
+    "@bromleysat/relative-to-absolute": "^1.1.0"
   },
   "jest": {
     "transformIgnorePatterns": [
