--- a/.github/workflows/react-main.yml
+++ b/.github/workflows/react-main.yml
@@ -16,6 +16,8 @@ jobs:
       - run: yarn install
       - run: yarn test
       - run: yarn build
+      - run: yarn start & wait-on http://localhost:3000
+      - run: yarn test:e2e -- --spec "cypress/integration/dataPlotter.spec.js"
 
       - name: relative to absolute
         run: sed -i 's/\/static/https:\/\/bromleysat.space\/data\/static/g' build/index.html
