--- a/package.json
+++ b/package.json
@@ -32,11 +32,15 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --verbose",
-    "test:e2e": "",
-    "eject": "react-scripts eject"
+    "test:e2e": "cypress run",
+    "eject": "react-scripts eject",
+    "cypress": "cypress open"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "plugin:cypress/recommended"
+    ]
   },
   "browserslist": {
     "production": [
@@ -51,7 +55,9 @@
     ]
   },
   "devDependencies": {
-    "@bromleysat/relative-to-absolute": "^1.1.0"
+    "@bromleysat/relative-to-absolute": "^1.1.0",
+    "cypress": "^9.7.0",
+    "eslint-plugin-cypress": "^2.12.1"
   },
   "jest": {
     "transformIgnorePatterns": [
