--- a/.github/workflows/react-main.yml
+++ b/.github/workflows/react-main.yml
@@ -15,9 +15,8 @@ jobs:
           cache: "yarn"
       - run: yarn install
       - run: yarn test
+      - run: yarn int-test
       - run: yarn build
-      - run: yarn start & wait-on http://localhost:3000
-      - run: yarn test:e2e -- --spec "cypress/integration/dataPlotter.spec.js"
 
       - name: relative to absolute
         run: sed -i 's/\/static/https:\/\/bromleysat.space\/data\/static/g' build/index.html
