--- a/.github/workflows/react-pr.yml
+++ b/.github/workflows/react-pr.yml
@@ -15,6 +15,5 @@ jobs:
           cache: "yarn"
       - run: yarn install
       - run: yarn test
+      - run: yarn int-test
       - run: yarn build
-      - run: yarn start & wait-on http://localhost:3000
-      - run: yarn test:e2e -- --spec "cypress/integration/dataPlotter.spec.js"
