--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
   "devDependencies": {
     "@bromleysat/relative-to-absolute": "^1.1.0",
     "cypress": "^9.7.0",
-    "eslint-plugin-cypress": "^2.12.1"
+    "eslint-plugin-cypress": "^2.12.1",
+    "start-server-and-test": "^1.14.0"
   },
   "jest": {
     "transformIgnorePatterns": [
