--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "test": "react-scripts test --verbose",
     "test:e2e": "cypress run",
     "eject": "react-scripts eject",
-    "cypress": "cypress open"
+    "cypress": "cypress open",
+    "int-test": "start-server-and-test next http://localhost:3000 test:e2e"
   },
   "eslintConfig": {
     "extends": [
