--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.24.0",
+    "cypress-real-events": "^1.7.1",
     "moment": "^2.29.3",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.0",
@@ -56,6 +57,7 @@
     ]
   },
   "devDependencies": {
+    "@4tw/cypress-drag-drop": "^2.2.1",
     "@bromleysat/relative-to-absolute": "^1.1.0",
     "cypress": "^9.7.0",
     "eslint-plugin-cypress": "^2.12.1",
