--- a/.github/workflows/react-main.yml
+++ b/.github/workflows/react-main.yml
@@ -15,6 +15,7 @@ jobs:
           cache: "yarn"
       - run: yarn install
       - run: yarn test
+      - run: yarn int-test
       - run: yarn build
 
       - name: relative to absolute
