--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.24.0",
+    "cypress-real-events": "^1.7.1",
     "moment": "^2.29.3",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.0",
@@ -32,10 +33,16 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --verbose",
-    "eject": "react-scripts eject"
+    "test:e2e": "cypress run",
+    "eject": "react-scripts eject",
+    "cypress": "cypress open",
+    "int-test": "start-server-and-test http://localhost:3000 test:e2e"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "plugin:cypress/recommended"
+    ]
   },
   "browserslist": {
     "production": [
@@ -50,7 +57,11 @@
     ]
   },
   "devDependencies": {
-    "@bromleysat/relative-to-absolute": "^1.1.0"
+    "@4tw/cypress-drag-drop": "^2.2.1",
+    "@bromleysat/relative-to-absolute": "^1.1.0",
+    "cypress": "^9.7.0",
+    "eslint-plugin-cypress": "^2.12.1",
+    "start-server-and-test": "^1.14.0"
   },
   "jest": {
     "transformIgnorePatterns": [
