--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.24.0",
     "cypress-real-events": "^1.7.1",
     "moment": "^2.29.3",
+    "nth-check": "^2.1.1",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.0",
     "react-dom": "^17.0.2",
@@ -67,5 +68,8 @@
     "transformIgnorePatterns": [
       "!node_modules/"
     ]
+  },
+  "resolutions": {
+    "nth-check": "^2.1.1"
   }
 }
