--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.24.0",
     "cypress-real-events": "^1.7.1",
+    "lodash": "^4.17.21",
     "moment": "^2.29.3",
     "nth-check": "^2.1.1",
     "react": "^17.0.2",
