--- a/.github/workflows/react-main.yml
+++ b/.github/workflows/react-main.yml
@@ -14,8 +14,8 @@ jobs:
           node-version: 14.x
           cache: "yarn"
       - run: yarn install
-      # - run: yarn test
-      # - run: yarn int-test
+      - run: yarn test
+      - run: yarn int-test
       - run: yarn build
 
       - name: relative to absolute
