--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
   "eslintConfig": {
     "extends": [
       "react-app",
-      "plugin:cypress/recommended"
+      "plugin:cypress/recommended",
+      "plugin:testing-library/react"
     ],
     "env": {
       "es2020": true
@@ -66,6 +67,7 @@
     "@bromleysat/relative-to-absolute": "^1.1.0",
     "cypress": "^9.7.0",
     "eslint-plugin-cypress": "^2.12.1",
+    "eslint-plugin-testing-library": "^5.10.2",
     "start-server-and-test": "^1.14.0"
   },
   "jest": {
