--- a/.github/workflows/react-pr.yml
+++ b/.github/workflows/react-pr.yml
@@ -16,4 +16,6 @@ jobs:
       - run: yarn install
       - run: yarn test
       - run: yarn int-test
+        env:
+          REACT_APP_API_KEY: ${{ secrets.REACT_APP_API_KEY_DEV }}
       - run: yarn build
