--- a/.github/workflows/react-main.yml
+++ b/.github/workflows/react-main.yml
@@ -6,6 +6,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      REACT_APP_API_KEY: ${{ secrets.REACT_APP_API_KEY_PRD }}
     steps:
       - uses: actions/checkout@v3
       - name: setup node
@@ -15,7 +17,7 @@ jobs:
           cache: "yarn"
       - run: yarn install
       - run: yarn test
-      - run: yarn int-test
+      #- run: yarn int-test
       - run: yarn build
 
       - name: relative to absolute
