--- a/.github/workflows/react-pr.yml
+++ b/.github/workflows/react-pr.yml
@@ -5,6 +5,9 @@ on:
     branches: ["main"]
 jobs:
   build:
+    env:
+      REACT_APP_API_KEY: ${{ secrets.REACT_APP_API_KEY_DEV }}
+      TEST: "TEST1"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -13,7 +16,11 @@ jobs:
         with:
           node-version: 14.x
           cache: "yarn"
+      - name: Print name
+        run: echo "Hello $TEST. $BUILD. My API_KEY is $REACT_APP_API_KEY"
+        env:
+          BUILD: "We are currently running the Build job"
       - run: yarn install
       - run: yarn test
-      - run: yarn int-test
+      #- run: yarn int-test
       - run: yarn build
